@@ -644,7 +644,7 @@ public class ThymeleafViewResolver
     
     
 
-    private boolean canHandle(final String viewName) {
+    protected boolean canHandle(final String viewName, @SuppressWarnings("unused") final Locale locale) {
         final String[] viewNamesToBeProcessed = getViewNames();
         final String[] viewNamesNotToBeProcessed = getExcludedViewNames();
         return ((viewNamesToBeProcessed == null || PatternMatchUtils.simpleMatch(viewNamesToBeProcessed, viewName)) &&
@@ -656,18 +656,18 @@ public class ThymeleafViewResolver
     
     @Override
     protected View createView(final String viewName, final Locale locale) throws Exception {
-        if (!canHandle(viewName)) {
+        if (!canHandle(viewName, locale)) {
             vrlogger.trace("[THYMELEAF] View {} cannot be handled by ThymeleafViewResolver. Passing on to the next resolver in the chain", viewName);
             return null;
         }
         if (viewName.startsWith(REDIRECT_URL_PREFIX)) {
             vrlogger.trace("[THYMELEAF] View {} is a redirect, and will not be handled directly by ThymeleafViewResolver", viewName);
-            String redirectUrl = viewName.substring(REDIRECT_URL_PREFIX.length());
+            final String redirectUrl = viewName.substring(REDIRECT_URL_PREFIX.length());
             return new RedirectView(redirectUrl, isRedirectContextRelative(), isRedirectHttp10Compatible());
         }
         if (viewName.startsWith(FORWARD_URL_PREFIX)) {
             vrlogger.trace("[THYMELEAF] View {} is a forward, and will not be handled directly by ThymeleafViewResolver", viewName);
-            String forwardUrl = viewName.substring(FORWARD_URL_PREFIX.length());
+            final String forwardUrl = viewName.substring(FORWARD_URL_PREFIX.length());
             return new InternalResourceView(forwardUrl);
         }
         vrlogger.trace("[THYMELEAF] View {} will be handled by ThymeleafViewResolver and a ThymeleafView instance will be created for it", viewName);
